fix(schema-contracts): 96/96 unit tests green
- TaskSchemaViolationException: use Collections.unmodifiableList(new ArrayList<>())
  instead of List.copyOf() to guarantee a new list instance (defensive copy test)
- SchemaContractExceptionTest: fix causeLinkage depth assertion (was 1, correct is 2
  — two getCause() calls needed to traverse ex→cause→null chain)
- SchemaContractValidatorTest: replace non-existent Map.builder() with HashMap loop
  for large map construction; add HashMap import
- SchemaContractExceptionTest: add missing java.io.IOException import

96/96 tests pass. dx.sh all GREEN (observe, compile, test, guards, invariants, report).

https://claude.ai/code/session_01Lo7UkU9hUT5VMBTdL4d8TH